Changed Facebook link.

--- a/views/gameroomlincoln.haml
+++ b/views/gameroomlincoln.haml
@@ -68,7 +68,7 @@
 					%div{:class => 'paper_bottom'}
 					%ul{:class => 'links'}
 						%li
-							%a{:href => 'http://www.facebook.com/gameroomlincoln', :title => 'Facebook', :class => 'facebook'} Facebook
+							%a{:href => 'http://www.facebook.com/pages/Lincoln-NE/The-Gameroom/113871411997032?ref=ts', :title => 'Facebook', :class => 'facebook'} Facebook
 						%li
 							%a{:href => 'http://gameroomlincoln.tumblr.com/rss', :title => 'RSS', :class => 'rss'} RSS
 				%div{:class => 'store_info'}
